--- a/package.json
+++ b/package.json
@@ -3,14 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "webpack-dev-server --port=4200",
-    "build": "webpack",
-    "test": "karma start ./karma.conf.js",
-    "lint": "ng lint",
-    "e2e": "protractor ./protractor.conf.js",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
-  },
+  "prestart": "next build",
+  "start": "next start -p ${PORT}",
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.0",
